do the mobile version of latest stories and more news

--- a/index.html
+++ b/index.html
@@ -604,6 +604,323 @@
               </div>
             </div>
           </div>
+          <div class="card signup-form d-none d-md-flex flex-column mt-5 py-2 px-3">
+            <div class="d-flex flex-row w-100 align-items-center">
+              <span class="icon-n"></span>
+              <label class="font-weight-bolder text-size-19" for="email">
+                Start your day with our top 5 articles
+              </label>
+            </div>
+            <input class="w-100 mb-3 mt-3 form-control" type="text" placeholder="Email address" id="email">
+            <button class="btn btn-danger" type="submit">FREE SIGN UP ></button>
+          </div>
+      </div>
+      <div class="d-md-none col-sm-12 order-sm-4">
+        <div class="more-stories-mobile">
+          <h2 class="font-weight-bold mt-3 mb-1 gray-text">MORE STORIES</h2>
+          <article class="pt-4 pb-3 border-news d-flex">
+            <img class="mr-2" src="assets/more.png" alt="Trump">
+            <div>
+              <h2 class="link-size-17">
+                <a class="hover-red" href="#">
+                  Trump Could Be Allowed to Stay at Mar-a-Lago, Attorney Says
+                </a>
+              </h2>
+              <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
+                be considered a member of staff at the club.</p>
+            </div>
+          </article>
+          <article class="pt-4 pb-3 border-news d-flex">
+            <img class="mr-2" src="assets/more.png" alt="Trump">
+            <div>
+              <h2 class="link-size-17">
+                <a class="hover-red" href="#">
+                  Trump Could Be Allowed to Stay at Mar-a-Lago, Attorney Says
+                </a>
+              </h2>
+              <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
+                be considered a member of staff at the club.</p>
+            </div>
+          </article>
+          <article class="pt-4 pb-3 border-news d-flex">
+            <img class="mr-2" src="assets/more.png" alt="Trump">
+            <div>
+              <h2 class="link-size-17">
+                <a class="hover-red" href="#">
+                  Trump Could Be Allowed to Stay at Mar-a-Lago, Attorney Says
+                </a>
+              </h2>
+              <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
+                be considered a member of staff at the club.</p>
+            </div>
+          </article>
+          <article class="pt-4 pb-3 border-news d-flex">
+            <img class="mr-2" src="assets/more.png" alt="Trump">
+            <div>
+              <h2 class="link-size-17">
+                <a class="hover-red" href="#">
+                  Trump Could Be Allowed to Stay at Mar-a-Lago, Attorney Says
+                </a>
+              </h2>
+              <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
+                be considered a member of staff at the club.</p>
+            </div>
+          </article>
+          <article class="pt-4 pb-3 border-news d-flex">
+            <img class="mr-2" src="assets/more.png" alt="Trump">
+            <div>
+              <h2 class="link-size-17">
+                <a class="hover-red" href="#">
+                  Trump Could Be Allowed to Stay at Mar-a-Lago, Attorney Says
+                </a>
+              </h2>
+              <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
+                be considered a member of staff at the club.</p>
+            </div>
+          </article>
+          <article class="pt-4 pb-3 border-news d-flex">
+            <img class="mr-2" src="assets/more.png" alt="Trump">
+            <div>
+              <h2 class="link-size-17">
+                <a class="hover-red" href="#">
+                  Trump Could Be Allowed to Stay at Mar-a-Lago, Attorney Says
+                </a>
+              </h2>
+              <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
+                be considered a member of staff at the club.</p>
+            </div>
+          </article>
+          <article class="pt-4 pb-3 border-news d-flex">
+            <img class="mr-2" src="assets/more.png" alt="Trump">
+            <div>
+              <h2 class="link-size-17">
+                <a class="hover-red" href="#">
+                  Trump Could Be Allowed to Stay at Mar-a-Lago, Attorney Says
+                </a>
+              </h2>
+              <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
+                be considered a member of staff at the club.</p>
+            </div>
+          </article>
+          <article class="pt-4 pb-3 border-news d-flex">
+            <img class="mr-2" src="assets/more.png" alt="Trump">
+            <div>
+              <h2 class="link-size-17">
+                <a class="hover-red" href="#">
+                  Trump Could Be Allowed to Stay at Mar-a-Lago, Attorney Says
+                </a>
+              </h2>
+              <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
+                be considered a member of staff at the club.</p>
+            </div>
+          </article>
+          <article class="pt-4 pb-3 border-news d-flex">
+            <img class="mr-2" src="assets/more.png" alt="Trump">
+            <div>
+              <h2 class="link-size-17">
+                <a class="hover-red" href="#">
+                  Trump Could Be Allowed to Stay at Mar-a-Lago, Attorney Says
+                </a>
+              </h2>
+              <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
+                be considered a member of staff at the club.</p>
+            </div>
+          </article>
+          <article class="pt-4 pb-3 border-news d-flex">
+            <img class="mr-2" src="assets/more.png" alt="Trump">
+            <div>
+              <h2 class="link-size-17">
+                <a class="hover-red" href="#">
+                  Trump Could Be Allowed to Stay at Mar-a-Lago, Attorney Says
+                </a>
+              </h2>
+              <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
+                be considered a member of staff at the club.</p>
+            </div>
+          </article>
+          <article class="pt-4 pb-3 border-news d-flex">
+            <img class="mr-2" src="assets/more.png" alt="Trump">
+            <div>
+              <h2 class="link-size-17">
+                <a class="hover-red" href="#">
+                  Trump Could Be Allowed to Stay at Mar-a-Lago, Attorney Says
+                </a>
+              </h2>
+              <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
+                be considered a member of staff at the club.</p>
+            </div>
+          </article>
+          <article class="pt-4 pb-3 d-flex">
+            <img class="mr-2" src="assets/more.png" alt="Trump">
+            <div>
+              <h2 class="link-size-17">
+                <a class="hover-red" href="#">
+                  Trump Could Be Allowed to Stay at Mar-a-Lago, Attorney Says
+                </a>
+              </h2>
+              <p>Palm Beach lawyer John C. Randolph said the case hinged on whether the former president could now
+                be considered a member of staff at the club.</p>
+            </div>
+          </article>
+        </div>
+        <div class="latest-news">
+          <h2 class="font-weight-bold mt-3 mb-1 gray-text">LATEST NEWS</h2>
+          <article class="pt-4 pb-3 border-news d-flex">
+            <img class="mr-2" src="assets/latest.png" alt="Trump">
+            <div>
+              <h2 class="link-size-17">
+                <a class="hover-red" href="#">
+                  Who Could Receive a Third Stimulus Check? Debate Could Lower Eligibility
+                </a>
+              </h2>
+              <p>President Joe Biden won't negotiate on the $1,400 payment amount, but said he's open to
+                reducing...</p>
+            </div>
+          </article>
+          <article class="pt-4 pb-3 border-news d-flex">
+            <img class="mr-2" src="assets/latest.png" alt="Trump">
+            <div>
+              <h2 class="link-size-17">
+                <a class="hover-red" href="#">
+                  Who Could Receive a Third Stimulus Check? Debate Could Lower Eligibility
+                </a>
+              </h2>
+              <p>President Joe Biden won't negotiate on the $1,400 payment amount, but said he's open to
+                reducing...</p>
+            </div>
+          </article>
+          <article class="pt-4 pb-3 border-news d-flex">
+            <img class="mr-2" src="assets/latest.png" alt="Trump">
+            <div>
+              <h2 class="link-size-17">
+                <a class="hover-red" href="#">
+                  Who Could Receive a Third Stimulus Check? Debate Could Lower Eligibility
+                </a>
+              </h2>
+              <p>President Joe Biden won't negotiate on the $1,400 payment amount, but said he's open to
+                reducing...</p>
+            </div>
+          </article>
+          <article class="pt-4 pb-3 border-news d-flex">
+            <img class="mr-2" src="assets/latest.png" alt="Trump">
+            <div>
+              <h2 class="link-size-17">
+                <a class="hover-red" href="#">
+                  Who Could Receive a Third Stimulus Check? Debate Could Lower Eligibility
+                </a>
+              </h2>
+              <p>President Joe Biden won't negotiate on the $1,400 payment amount, but said he's open to
+                reducing...</p>
+            </div>
+          </article>
+          <article class="pt-4 pb-3 border-news d-flex">
+            <img class="mr-2" src="assets/latest.png" alt="Trump">
+            <div>
+              <h2 class="link-size-17">
+                <a class="hover-red" href="#">
+                  Who Could Receive a Third Stimulus Check? Debate Could Lower Eligibility
+                </a>
+              </h2>
+              <p>President Joe Biden won't negotiate on the $1,400 payment amount, but said he's open to
+                reducing...</p>
+            </div>
+          </article>
+          <article class="pt-4 pb-3 border-news d-flex">
+            <img class="mr-2" src="assets/latest.png" alt="Trump">
+            <div>
+              <h2 class="link-size-17">
+                <a class="hover-red" href="#">
+                  Who Could Receive a Third Stimulus Check? Debate Could Lower Eligibility
+                </a>
+              </h2>
+              <p>President Joe Biden won't negotiate on the $1,400 payment amount, but said he's open to
+                reducing...</p>
+            </div>
+          </article>
+          <article class="pt-4 pb-3 border-news d-flex">
+            <img class="mr-2" src="assets/latest.png" alt="Trump">
+            <div>
+              <h2 class="link-size-17">
+                <a class="hover-red" href="#">
+                  Who Could Receive a Third Stimulus Check? Debate Could Lower Eligibility
+                </a>
+              </h2>
+              <p>President Joe Biden won't negotiate on the $1,400 payment amount, but said he's open to
+                reducing...</p>
+            </div>
+          </article>
+          <article class="pt-4 pb-3 border-news d-flex">
+            <img class="mr-2" src="assets/latest.png" alt="Trump">
+            <div>
+              <h2 class="link-size-17">
+                <a class="hover-red" href="#">
+                  Who Could Receive a Third Stimulus Check? Debate Could Lower Eligibility
+                </a>
+              </h2>
+              <p>President Joe Biden won't negotiate on the $1,400 payment amount, but said he's open to
+                reducing...</p>
+            </div>
+          </article>
+          <article class="pt-4 pb-3 d-flex">
+            <img class="mr-2" src="assets/latest.png" alt="Trump">
+            <div>
+              <h2 class="link-size-17">
+                <a class="hover-red" href="#">
+                  Who Could Receive a Third Stimulus Check? Debate Could Lower Eligibility
+                </a>
+              </h2>
+              <p>President Joe Biden won't negotiate on the $1,400 payment amount, but said he's open to
+                reducing...</p>
+            </div>
+          </article>
+        </div>
+        <section class="d-md-none d-sm-block assorted-stories">
+          <div class="link-size-16 text-decoration-none">
+            <h2 class="font-weight-bold gray-text mt-4">MY TURN</h2>
+            <div class="d-flex flex-column">
+              <article class="d-flex flex-column mt-2 mb-4">
+                <img class="img-fluid" src="assets/myturn2.png" alt="bridgerton costumes">
+                <a href="#" class="gray-text w-100 m-1  pr-2">'I Designed The Bridgerton Costumes' </a>
+              </article>
+              <article class="d-flex flex-column mt-2 mb-4">
+                <img src="assets/myturn2.png" alt="bridgerton costumes">
+                <a href="#" class="gray-text w-100 m-1 pr-2">'I Designed The Bridgerton Costumes' </a>
+              </article>
+              <article class="d-flex flex-column mt-2 mb-4">
+                <img src="assets/myturn2.png" alt="bridgerton costumes">
+                <a href="#" class="gray-text w-100 m-1 pr-3">'I Designed The Bridgerton Costumes' </a>
+              </article>
+            </div>
+          </div>
+          <div class="link-size-16 text-decoration-none">
+            <h2 class="font-weight-bold gray-text mt-2 mb-4">CULTURE & TRAVEL</h2>
+            <div class="d-flex flex-column">
+              <article class="d-flex flex-column mt-2 mb-4">
+                <img class="img-fluid" src="assets/culture2.png" alt="Man swimming">
+                <a  href="#" class="gray-text w-100 m-1 pr-2">'The Secrets to Happiness Around the World' </a>
+              </article>
+              <article class="d-flex flex-column mt-2 mb-4">
+                <img class="img-fluid" src="assets/culture2.png" alt="Man swimming">
+                <a  href="#" class="gray-text w-100 m-1 pr-2">'The Secrets to Happiness Around the World' </a>
+              </article>
+              <article class="d-flex flex-column mt-2 mb-4">
+                <img class="img-fluid" src="assets/culture2.png" alt="Man swimming">
+                <a  href="#" class="gray-text w-100 m-1 pr-2">'The Secrets to Happiness Around the World' </a>
+              </article>
+            </div>
+          </div>
+          <div class="card signup-form d-flex d-md-none flex-column mt-5 py-2 px-3">
+            <div class="d-flex flex-row w-100 align-items-center">
+              <span class="icon-n"></span>
+              <label class="font-weight-bolder text-size-19" for="email">
+                Start your day with our top 5 articles
+              </label>
+            </div>
+            <input class="w-100 mb-3 mt-3 form-control" type="text" placeholder="Email address" id="email">
+            <button class="btn btn-danger" type="submit">FREE SIGN UP ></button>
+          </div>
+          </section>
+
       </div>
     </div>
 
