do the in the magazine section

--- a/index.html
+++ b/index.html
@@ -897,15 +897,15 @@
             <div class="d-flex flex-column">
               <article class="d-flex flex-column mt-2 mb-4">
                 <img class="img-fluid" src="assets/culture2.png" alt="Man swimming">
-                <a  href="#" class="gray-text w-100 m-1 pr-2">'The Secrets to Happiness Around the World' </a>
+                <a href="#" class="gray-text w-100 m-1 pr-2">'The Secrets to Happiness Around the World' </a>
               </article>
               <article class="d-flex flex-column mt-2 mb-4">
                 <img class="img-fluid" src="assets/culture2.png" alt="Man swimming">
-                <a  href="#" class="gray-text w-100 m-1 pr-2">'The Secrets to Happiness Around the World' </a>
+                <a href="#" class="gray-text w-100 m-1 pr-2">'The Secrets to Happiness Around the World' </a>
               </article>
               <article class="d-flex flex-column mt-2 mb-4">
                 <img class="img-fluid" src="assets/culture2.png" alt="Man swimming">
-                <a  href="#" class="gray-text w-100 m-1 pr-2">'The Secrets to Happiness Around the World' </a>
+                <a href="#" class="gray-text w-100 m-1 pr-2">'The Secrets to Happiness Around the World' </a>
               </article>
             </div>
           </div>
@@ -919,12 +919,54 @@
             <input class="w-100 mb-3 mt-3 form-control" type="text" placeholder="Email address" id="email">
             <button class="btn btn-danger" type="submit">FREE SIGN UP ></button>
           </div>
-          </section>
-
+        </section>
       </div>
     </div>
-
-
+    <div class="row link-size-18">
+      <div class="col-12 row d-flex align-items-center justify-content-center pb-2 border-news">
+        <div class="icon-n">
+        </div>
+        <div>IN THE MAGAZINE</div>
+      </div>
+      <div class="row adjust-image col-12 mx-1 mt-4 ">
+        <div class="mb-3 col-md-3 col-sm-12 special-image">
+          <img src="assets/features1.png" alt="trump" class="w-100">
+          <div class="features text-center p-1">
+            <a class="font-weight-bolder" href="#">SEE ALL FEATURES ></a>
+          </div>
+        </div>
+        <div class="mb-3 col-md-3 col-sm-12">
+          <img src="assets/itm.webp" alt="woman carrying a giant ball made to look like iron" class="w-100">
+          <div class="pt-2 pb-1">
+            <a href="#" class="text-size-15 bg-danger text-white p-1">PERISCOPE</a>
+            <a href="#" class="text-danger font-weight-light">OPINION</a>
+          </div>
+          <a href="#" class="hover-red">
+            Student Debt is a Curse Upon America's Future. Biden Must Wipe It Out
+          </a>
+        </div>
+        <div class="mb-3 col-md-3 col-sm-12">
+          <img src="assets/itm.webp" alt="woman carrying a giant ball made to look like iron" class="w-100">
+          <div class="pt-2 pb-1">
+            <a href="#" class="text-size-15 bg-danger text-white p-1">PERISCOPE</a>
+            <a href="#" class="text-danger font-weight-light">OPINION</a>
+          </div>
+          <a href="#" class="hover-red">
+            Student Debt is a Curse Upon America's Future. Biden Must Wipe It Out
+          </a>
+        </div>
+        <div class="mb-3 col-md-3 col-sm-12">
+          <img src="assets/itm.webp" alt="woman carrying a giant ball made to look like iron" class="w-100">
+          <div class="pt-2 pb-1">
+            <a href="#" class="text-size-15 bg-danger text-white p-1">PERISCOPE</a>
+            <a href="#" class="text-danger font-weight-light">OPINION</a>
+          </div>
+          <a href="#" class="hover-red">
+            Student Debt is a Curse Upon America's Future. Biden Must Wipe It Out
+          </a>
+        </div>
+      </div>
+    </div>
   </main>
 
 
