--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <header>
-    <div class="px-lg-3 px-2 header-container d-flex justify-content-between align-items-center">
+    <div class="row px-lg-3 px-2 header-container d-flex justify-content-between align-items-center">
       <div class="col2 d-none d-lg-block">
         <div class="city d-flex align-items-center text-white">
           <i class="fas fa-cloud-sun"></i>32° Belo Horizonte, BR >
@@ -42,44 +42,56 @@
   <nav class="d-lg-flex d-none justify-content-between align-items-center">
     <div class="d-lg-block d-none h-100 w-100 header-deco">
       <div class="w-100">
-        <ul class="d-flex justify-content-between align-items-center mt-2 header-list text-size-19 font-weight-bolder">
-          <li>
-            <a href="#" class="pr-3 border-right">U.S</a>
-          </li>
-          <li>
-            <a href="#" class="pr-3 border-right">World</a>
-          </li>
-          <li>
-            <a href="#" class="pr-3  border-right">Business</a>
-          </li>
-          <li>
-            <a href="#" class="nowrap pr-3  border-right">Tech&Science</a>
-          </li>
-          <li>
-            <a href="#" class="pr-3  border-right">Culture</a>
-          </li>
-          <li>
-            <a href="#" class="pr-3  border-right">Newsgeek</a>
-          </li>
-          <li>
-            <a href="#" class="pr-3  border-right">Sports</a>
-          </li>
-          <li>
-            <a href="#" class="pr-3  border-right">Health</a>
-          </li>
-          <li>
-            <a href="#" class="pr-3  border-right">The Debate</a>
-          </li>
-          <li>
-            <a href="#" class="pr-3  border-right">Experts</a>
-          </li>
-          <li>
-            <a href="#" class="pr-3  border-right">Vantage</a>
-          </li>
-          <li>
+        <div class="d-flex justify-content-between align-items-center mt-2 header-list text-size-19 font-weight-bolder ">
+          <div>
+            <a href="#">U.S</a>
+          </div>
+          <hr class="line">
+          <div>
+            <a href="#">World</a>
+          </div>
+          <hr class="line">
+          <div>
+            <a href="#">Business</a>
+          </div>
+          <hr class="line">
+          <div>
+            <a href="#">Tech&Science</a>
+          </div>
+          <hr class="line">
+          <div>
+            <a href="#">Culture</a>
+          </div>
+          <hr class="line">
+          <div>
+            <a href="#">Newsgeek</a>
+          </div>
+          <hr class="line">
+          <div>
+            <a href="#">Sports</a>
+          </div>
+          <hr class="line">
+          <div>
+            <a href="#">Health</a>
+          </div>
+          <hr class="line">
+          <div>
+            <a href="#">The Debate</a>
+          </div>
+          <hr class="line">
+          <div>
+            <a href="#">Experts</a>
+          </div>
+          <hr class="line">
+          <div>
+            <a href="#">Vantage</a>
+          </div>
+          <hr class="line">
+          <div>
             <a href="#" class="pr-3">Search</a>
-          </li>
-        </ul>
+          </div>
+          <hr class="line">
+        </div>
       </div>
       <div class="w-100">
         <ul class="d-flex align-items-center mt-2 text-size-18 trending-list">
@@ -922,13 +934,13 @@
         </section>
       </div>
     </div>
-    <div class="row link-size-18">
-      <div class="col-12 row d-flex align-items-center justify-content-center pb-2 border-news">
+    <div class="second-section row m-2 link-size-18">
+      <div class="mx-1 col-12 row d-flex align-items-center justify-content-center pb-2 border-news">
         <div class="icon-n">
         </div>
         <div>IN THE MAGAZINE</div>
       </div>
-      <div class="row adjust-image col-12 mx-1 mt-4 ">
+      <div class="mx-1 row m-2 adjust-image col-12 mt-4 ">
         <div class="mb-3 col-md-3 col-sm-12 special-image">
           <img src="assets/features1.png" alt="trump" class="w-100">
           <div class="features text-center p-1">
@@ -964,6 +976,105 @@
           <a href="#" class="hover-red">
             Student Debt is a Curse Upon America's Future. Biden Must Wipe It Out
           </a>
+        </div>
+      </div>
+    </div>
+    <div class="row m-2 text-size-15 link-size-24">
+      <div class="col-12 row d-flex align-items-center justify-content-center pb-2 border-news">
+        <div class="icon-n">
+        </div>
+        <div>EDITOR'S PICK</div>
+      </div>
+      <div class="row m-2 adjust-image col-12 mt-4 ">
+        <div class="mb-3 col-lg-3 col-md-6 col-sm-12">
+          <img src="assets/editor.png" alt="woman carrying a giant ball made to look like iron" class="w-100">
+          <div>
+            <a class="roboto line-height-1 hover-red" href="#" >
+              Russia Warns Biden It Will Retaliate Against Any Sanctions Over Navalny
+            </a>
+            <p class="mt-2">
+              The anti-corruption campaigner was jailed on Wednesday after returning to Russia voluntarily following an FSB assassination attempt.
+            </p>
+          </div>
+        </div>
+        <div class="mb-3 col-lg-3 col-md-6 col-sm-12">
+          <img src="assets/editor.png" alt="woman carrying a giant ball made to look like iron" class="w-100">
+          <div>
+            <a class="roboto line-height-1 hover-red" href="#" >
+              Russia Warns Biden It Will Retaliate Against Any Sanctions Over Navalny
+            </a>
+            <p class="mt-2">
+              The anti-corruption campaigner was jailed on Wednesday after returning to Russia voluntarily following an FSB assassination attempt.
+            </p>
+          </div>
+        </div>
+        <div class="mb-3 col-lg-3 col-md-6 col-sm-12">
+          <img src="assets/editor.png" alt="woman carrying a giant ball made to look like iron" class="w-100">
+          <div>
+            <a class="roboto line-height-1 hover-red" href="#" >
+              Russia Warns Biden It Will Retaliate Against Any Sanctions Over Navalny
+            </a>
+            <p class="mt-2">
+              The anti-corruption campaigner was jailed on Wednesday after returning to Russia voluntarily following an FSB assassination attempt.
+            </p>
+          </div>
+        </div>
+        <div class="mb-3 col-lg-3 col-md-6 col-sm-12">
+          <img src="assets/editor.png" alt="woman carrying a giant ball made to look like iron" class="w-100">
+          <div>
+            <a class="roboto line-height-1 hover-red" href="#" >
+              Russia Warns Biden It Will Retaliate Against Any Sanctions Over Navalny
+            </a>
+            <p class="mt-2">
+              The anti-corruption campaigner was jailed on Wednesday after returning to Russia voluntarily following an FSB assassination attempt.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="row m-2 adjust-image mt-4 ">
+        <div class="mb-3 col-lg-3 col-md-6 col-sm-12">
+          <img src="assets/editor.png" alt="woman carrying a giant ball made to look like iron" class="w-100">
+          <div>
+            <a class="roboto line-height-1 hover-red" href="#" >
+              Russia Warns Biden It Will Retaliate Against Any Sanctions Over Navalny
+            </a>
+            <p class="mt-2">
+              The anti-corruption campaigner was jailed on Wednesday after returning to Russia voluntarily following an FSB assassination attempt.
+            </p>
+          </div>
+        </div>
+        <div class="mb-3 col-lg-3 col-md-6 col-sm-12">
+          <img src="assets/editor.png" alt="woman carrying a giant ball made to look like iron" class="w-100">
+          <div>
+            <a class="roboto line-height-1 hover-red" href="#" >
+              Russia Warns Biden It Will Retaliate Against Any Sanctions Over Navalny
+            </a>
+            <p class="mt-2">
+              The anti-corruption campaigner was jailed on Wednesday after returning to Russia voluntarily following an FSB assassination attempt.
+            </p>
+          </div>
+        </div>
+        <div class="mb-3 col-lg-3 col-md-6 col-sm-12">
+          <img src="assets/editor.png" alt="woman carrying a giant ball made to look like iron" class="w-100">
+          <div>
+            <a class="roboto line-height-1 hover-red" href="#" >
+              Russia Warns Biden It Will Retaliate Against Any Sanctions Over Navalny
+            </a>
+            <p class="mt-2">
+              The anti-corruption campaigner was jailed on Wednesday after returning to Russia voluntarily following an FSB assassination attempt.
+            </p>
+          </div>
+        </div>
+        <div class="mb-3 col-lg-3 col-md-6 col-sm-12">
+          <img src="assets/editor.png" alt="woman carrying a giant ball made to look like iron" class="w-100">
+          <div>
+            <a class="roboto line-height-1 hover-red" href="#" >
+              Russia Warns Biden It Will Retaliate Against Any Sanctions Over Navalny
+            </a>
+            <p class="mt-2">
+              The anti-corruption campaigner was jailed on Wednesday after returning to Russia voluntarily following an FSB assassination attempt.
+            </p>
+          </div>
         </div>
       </div>
     </div>
