installed linters and fixed the displayed errors

--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
         <div class="text-white d-none d-md-block font-weight-bolder">
           Login
         </div>
-        <button class="mx-2 p-1 btn-warning font-weight-bolder subscribe">
+        <button type="submit" class="mx-2 p-1 btn-warning font-weight-bolder subscribe">
           <b>SUBSCRIBE</b>
         </button>
         <div class="text-white"><i class="fas fa-bars d-lg-none"></i>
           <div>
           </div>
         </div>
+      </div>
+    </div>
   </header>
   <nav class="d-lg-flex d-none justify-content-between align-items-center">
     <div class="d-lg-block d-none h-100 w-100 header-deco">
@@ -89,7 +91,8 @@
           </div>
           <hr class="line">
           <div>
-            <a href="#" class="font-weight-lighter gray-text search">Search <span><i class="fas fa-search"></i></span></a>
+            <a href="#" class="font-weight-lighter gray-text search">Search <span><i
+                  class="fas fa-search"></i></span></a>
           </div>
         </div>
       </div>
@@ -117,6 +120,7 @@
 
         </ul>
       </div>
+    </div>
   </nav>
   <main>
     <hr>
@@ -626,6 +630,7 @@
             <input class="w-100 mb-3 mt-3 form-control" type="text" placeholder="Email address" id="email">
             <button class="btn btn-danger" type="submit">FREE SIGN UP ></button>
           </div>
+          </section>  
       </div>
       <div class="d-md-none col-sm-12 order-sm-4">
         <div class="more-stories-mobile">
@@ -928,7 +933,7 @@
                 Start your day with our top 5 articles
               </label>
             </div>
-            <input class="w-100 mb-3 mt-3 form-control" type="text" placeholder="Email address" id="email">
+            <input class="w-100 mb-3 mt-3 form-control" type="text" placeholder="Email address">
             <button class="btn btn-danger" type="submit">FREE SIGN UP ></button>
           </div>
         </section>
@@ -1394,21 +1399,22 @@
       </div>
     </div>
     <div class="d-flex align-items-center mt-2 link-size-14 text-size-15">
-      <div class="font-weight-bolder px-2">Editions:</li></div>
+      <div class="font-weight-bolder px-2">Editions:
+      </div>
       <a href="#" class="text-decoration-none px-2 border-end">U.S. Edition</a>
-      <a href="#" class="text-decoration-none px-2 border-end">日本</a href="#">
+      <a href="#" class="text-decoration-none px-2 border-end">日本</a>
       <a href="#" class="text-decoration-none px-2 border-end">Pakistan</a>
       <a href="#" class="text-decoration-none px-2 border-end">Polska</a>
       <a href="#" class="text-decoration-none px-2 border-end">România</a>
     </div>
     <div class="d-flex flex-wrap align-items-center mt-2 link-size-14 text-size-15">
       <a href="#" class="text-decoration-none px-2 border-end">Corrections</a>
-      <a href="#" class="text-decoration-none px-2 border-end">Contact Us</a href="#">
+      <a href="#" class="text-decoration-none px-2 border-end">Contact Us</a>
       <a href="#" class="text-decoration-none px-2 border-end">Editorial Guidelines</a>
       <a href="#" class="text-decoration-none px-2 border-end">Advertise</a>
       <a href="#" class="text-decoration-none px-2 border-end">Copyright</a>
       <a href="#" class="text-decoration-none px-2 border-end">Terms & Conditions</a>
-      <a href="#" class="text-decoration-none px-2 border-end">Privavy Policy</a href="#">
+      <a href="#" class="text-decoration-none px-2 border-end">Privavy Policy</a>
       <a href="#" class="text-decoration-none px-2 border-end">Cookie Policy</a>
       <a href="#" class="text-decoration-none px-2 border-end">Terms of Sale</a>
       <a href="#" class="text-decoration-none px-2 border-end">Archive</a>
