make the magazine image into two, align them to overlap correctly and fix the centering in lower resolutions

--- a/index.html
+++ b/index.html
@@ -1347,14 +1347,14 @@
       <div class="d-flex pb-5 flex-column col-lg-7 col-md-12 link">
         <h2 class="text-size-17 font-weight bold text-danger m-3">SUBSCRIBE</h2>
         <div class="row m-1 d-flex">
-          <div class="col-md-4 col-sm-12 d-md-block d-flex align-items-center justify-content-center">
-            <img class="img-fluid" src="assets/magazines.png" alt="magazines">
-
+          <div class="align-self-center stacked-mags col-md-4 col-sm-12 d-md-block d-flex align-items-center justify-content-center">
+            <img class="mag1" src="assets/magazine1.jpg" alt="magazine">
+            <img class="mag2" src="assets/magazine2.jpg" alt="magazine">
           </div>
           <div
-            class="m-2 pt-2 pb-2 col-md-7 col-sm-12 d-md-block d-flex align-items-center justify-content-center flex-column">
-            <h5 class="font-weight-bold">In-depth Stories You Don't See Elsewhere About Topics You Want to Read!</h5>
-            <p class=" pt-2 pb-2 text-size-15">All Access + Weekly Delivery. <br>
+            class="m-2 pt-2 pr-0 pb-2 col-md-6 col-sm-12 d-md-block d-flex align-items-center justify-content-center  flex-column">
+            <h5 class="text-break font-weight-bold">In-depth Stories You Don't See Elsewhere About Topics You Want to Read!</h5>
+            <p class="text-break pt-2 pb-2 text-size-15">All Access + Weekly Delivery. <br>
               Choose A Membership That's Perfect for You!</p>
             <a href="#" class="text-size-19  pt-2 pb-2 bg-danger text-white p-1">SUBSCRIBE</a>
           </div>
