remove now unused classes from the stacked mags div

--- a/index.html
+++ b/index.html
@@ -1347,7 +1347,7 @@
       <div class="d-flex pb-5 flex-column col-lg-7 col-md-12 link">
         <h2 class="text-size-17 font-weight bold text-danger m-3">SUBSCRIBE</h2>
         <div class="row m-1 d-flex">
-          <div class="align-self-center stacked-mags col-md-4 col-sm-12 d-md-block d-flex align-items-center justify-content-center">
+          <div class="stacked-mags col-md-4 col-sm-12 d-md-block d-flex">
             <img class="mag1" src="assets/magazine1.jpg" alt="magazine">
             <img class="mag2" src="assets/magazine2.jpg" alt="magazine">
           </div>
